--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "css-in-js-easing",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.esm.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
+    "build": "run-p build:*",
+    "build:esbuild": "ts-node build.ts",
+    "build:types": "tsc --declaration --emitDeclarationOnly --declarationDir './dist'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +23,11 @@
   "bugs": {
     "url": "https://github.com/hiro0218/css-in-js-easing/issues"
   },
-  "homepage": "https://github.com/hiro0218/css-in-js-easing#readme"
+  "homepage": "https://github.com/hiro0218/css-in-js-easing#readme",
+  "devDependencies": {
+    "esbuild": "^0.14.38",
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
+  }
 }
