--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "css-in-js-easing",
   "version": "1.0.0",
-  "description": "",
+  "description": "This library retrieves easing-function for CSS property.",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
@@ -18,6 +18,11 @@
     "type": "git",
     "url": "git+https://github.com/hiro0218/css-in-js-easing.git"
   },
+  "keywords": [
+    "css",
+    "easing",
+    "css-in-js"
+  ],
   "author": "hiro",
   "license": "MIT",
   "bugs": {
