--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "build": "run-p build:*",
-    "build:esbuild": "ts-node build.ts",
+    "build:easings": "ts-node build-easings.ts",
+    "build:modules": "ts-node build-modules.ts",
     "build:types": "tsc --declaration --emitDeclarationOnly --declarationDir './dist'",
     "prepare": "npm run build"
   },
@@ -35,7 +36,11 @@
   },
   "homepage": "https://github.com/hiro0218/css-in-js-easing#readme",
   "devDependencies": {
-    "esbuild": "^0.14.38",
+    "@types/fs-extra": "^9.0.13",
+    "@types/js-yaml": "^4.0.5",
+    "esbuild": "^0.14.39",
+    "fs-extra": "^10.1.0",
+    "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
