--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "css-in-js-easing",
   "version": "1.1.2",
   "description": "This library retrieves easing-function for CSS property.",
+  "sideEffects": false,
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.js",
   "types": "./dist/index.d.ts",
