--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
     "@types/js-yaml": "^4.0.5",
-    "esbuild": "^0.16.1",
+    "@types/node": "^18.11.17",
+    "esbuild": "^0.16.10",
     "fs-extra": "^10.1.0",
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   }
 }
