--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@types/fs-extra": "^11.0.1",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^20.2.5",
+    "@types/prettier": "^2.7.3",
     "esbuild": "^0.17.19",
     "fs-extra": "^11.1.1",
     "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
